story-ru: fix gender markers

--- a/story-ru.tex
+++ b/story-ru.tex
@@ -47,126 +47,126 @@
 
 \section*{О себе}
 
-Гузик Алесь Юрьевич. Родился 1 сентября 1990 года в Минске. С
-компьютером с 5 лет. Около третьего класса твёрдо решил связать свою
-жизнь с компьютерами. С 4 класса учился в физико-математической
-школе. В 6 классе ходил на курсы по бейсику. Летом между 7 и 8
-учил JavaScript и HTML по журналам <<Информатика>>\footnote{Доступа
+Гузик Алеся Юрьевна. Родилась 1 сентября 1990 года в Минске. С
+компьютером с 5 лет. Около третьего класса твёрдо решила связать свою
+жизнь с компьютерами. С 4 класса училась в физико-математической
+школе. В 6 классе ходила на курсы по бейсику. Летом между 7 и 8
+учила JavaScript и HTML по журналам <<Информатика>>\footnote{Доступа
 к компьютеру не было, сохранился код написанный карандашом в тетради}.
-В 8-9 классах помогал всему классу с паскалем. Где-то между 8 и 9
-классами впервые познакомился с Линуксом (Mandrake 10 на 3 CD).
-После 9 класса поступил в лицейский физ-мат класс. В 10 классе писал
+В 8-9 классах помогала всему классу с паскалем. Где-то между 8 и 9
+классами впервые познакомилась с Линуксом (Mandrake 10 на 3 CD).
+После 9 класса поступила в лицейский физ-мат класс. В 10 классе писала
 что-то на Delphi (где-то даже сохранился калькулятор для
 арифметических выражений со скобками, написанный когда я ещё даже не
-знал что такое обратная польская запись). Хотел научиться писать игры
-(в игры при этом практически не играл). Пытался самостоятельно учить
-Java и C++, но быстро стало скучно. В 2007 году закончил лицейский
-класс и поступил в Белорусский Государственный Университет Информатики
+знала что такое обратная польская запись). Хотела научиться писать игры
+(в игры при этом практически не играла). Пыталась самостоятельно учить
+Java и C++, но быстро стало скучно. В 2007 году закончила лицейский
+класс и поступила в Белорусский Государственный Университет Информатики
 и Радиоэлектроники на факультет Компьютерных Систем и Сетей.
 
-На первом курсе был Си, быстро разобравшись с которым я полез на
-википедию и начал читать всё подряд о языках программирования. Так я впервые узнал о
+На первом курсе был Си, быстро разобравшись с которым я полезла на
+википедию и начала читать всё подряд о языках программирования. Так я впервые узнала о
 Ruby и позже о функциональном программировании. На тот момент кроме
 Ruby мне показались очень интересными APL, J, Erlang, Haskell и
-семейство Lisp. Отметил для себя что когда-нибудь всё это буду знать.
-На первом курсе начал писать на Ruby генератор для выполнения
-рассчётных работ по минимизации булевых функций\footnote{Написал
-строк 300, до конца так и не довёл.}.
+семейство Lisp. Отметила для себя что когда-нибудь всё это буду знать.
+На первом курсе начала писать на Ruby генератор для выполнения
+рассчётных работ по минимизации булевых функций\footnote{Написала
+строк 300, до конца так и не довёла.}.
 
 На втором курсе был C++, ассемблер для intel 8086 и позже C\#. В конце
 давали несколько лекций по паттернам ООП. Паттерны показались
 костылями из копипасты для недостаточно гибких языков. На втором курсе
-активно взялся за полный переход на линукс. Параллельно разбирался с Qt4
-и слушал Ruby NoName Podcast. Начал учить японский. Начал ходить на
-лекции инкубатора бизнес-проектов. Начал ходить на конференции (на тот
+активно взялась за полный переход на линукс. Параллельно разбиралась с Qt4
+и слушала Ruby NoName Podcast. Начала учить японский. Начала ходить на
+лекции инкубатора бизнес-проектов. Начала ходить на конференции (на тот
 момент в основном связанные с веб-разработкой и юзабилити).
 
-На третьем курсе взялся за ФП. Учил Erlang и Haskell. На эрланге даже
-код какой-то сохранился. Сдал в Москве экзамен по японскому (JLPT4),
-получил сертификат. Ходил на курсы по разработке под Android. Не
-выдержал натиска бойлерплейтов на Java+XML и бросил. Где-то в это же
-время начал использовать Emacs. Весной поставил на попробовать OS X.
-Летом впервые съездил на конференцию Linux Vacation/Eastern Europe
-(LVEE), куда с тех пор каждый год езжу. Сверстал свой первый курсовой
+На третьем курсе взялась за ФП. Учила Erlang и Haskell. На эрланге даже
+код какой-то сохранился. Сдала в Москве экзамен по японскому (JLPT4),
+получила сертификат. Ходила на курсы по разработке под Android. Не
+выдержала натиска бойлерплейтов на Java+XML и бросила. Где-то в это же
+время начала использовать Emacs. Весной поставила на попробовать OS X.
+Летом впервые съездила на конференцию Linux Vacation/Eastern Europe
+(LVEE), куда с тех пор каждый год езжу. Сверстала свой первый курсовой
 в \LaTeX.
 
-На четвёртом курсе продолжил интересоваться ФП. Взялся смотреть
+На четвёртом курсе продолжила интересоваться ФП. Взялась смотреть
 SICP, появился интерес к лиспам. На одной из конференций
-пообщался с рубистами и понял что пора искать работу (ФП как вариант
-работы не рассматривался, вакансий таких нет). Перечитал <<Programming
-Ruby>>, начал читать <<Object-Oriented Javascript>>. С января пошёл на курсы
+пообщалась с рубистами и поняла что пора искать работу (ФП как вариант
+работы не рассматривался, вакансий таких нет). Перечитала <<Programming
+Ruby>>, начала читать <<Object-Oriented Javascript>>. С января пошла на курсы
 в компанию itransition и после трёх занятий мне предложили работу.
-На работе занимался разработкой на Ruby on Rails, аутсорсинг. К
-этому времени я окончательно вернулся с OS X на Archlinux и начал
+На работе занималась разработкой на Ruby on Rails, аутсорсинг. К
+этому времени я окончательно вернулась с OS X на Archlinux и начала
 пользоваться тайловыми оконными менеджерами (XMonad, Awesome,
 StumpWM и затем CLFSWM, которым пользуюсь до сих пор и являюсь
-контрибьютером). Купил Nokia N900 и мучал её всем подряд\footnote{
-Летом на сборах после военной кафедры когда лежал в медроте с
-солдатами-срочниками прямо на ней написал руби-скрипт читавший данные
+контрибьютеркой). Купила Nokia N900 и мучала её всем подряд\footnote{
+Летом на сборах после военной кафедры когда лежала в медроте с
+солдатами-срочниками в сосоедних палатах, прямо на ней написала руби-скрипт читавший данные
 с акселерометра и начинавший громко орать mplayer'ом если его брали в
-руки (чтобы телефон не украли)}. Учил из
-интереса Perl. Написал на нём свой ack до того как узнал о его
-существовании. Хотелось ФП и всё больше лиспа. Начал интересоваться
-Clojure и читал про Scala. Пытался продвинуть их использование в
+руки (чтобы телефон не украли)}. Учила из
+интереса Perl. Написала на нём свой ack до того как узнала о его
+существовании. Хотелось ФП и всё больше лиспа. Начала интересоваться
+Clojure и читала про Scala. Пыталась продвинуть их использование в
 компании. Идея с Clojure не понравилась совсем, на Scala
-investigations дали часы чтобы отстал. Потом забыли.
+investigations дали часы чтобы отстала. Потом забыли.
 
-В начале пятого курса начало маячить распределение и я решил что за те
+В начале пятого курса начало маячить распределение и я решила что за те
 деньги что мне платят ещё два года я работать не
-хочу. Вспомнил что компания Altoros когда-то проводила конференции по
-руби. Сходил к ним на собеседование и меня взяли на те деньги что
-написал в качестве оптимальных, вышло в три раза больше. Купил VPS на
-Linode. Поднял почту(postfix), jabber(prosody), ftp(vsftpd), http
-proxy(squid), и веб-сервер(apache). Насильственно пересадил себя на
+хочу. Вспомнила что компания Altoros когда-то проводила конференции по
+руби. Сходила к ним на собеседование и меня взяли на те деньги что
+написала в качестве оптимальных, вышло в три раза больше. Купила VPS на
+Linode. Подняла почту(postfix), jabber(prosody), ftp(vsftpd), http
+proxy(squid), и веб-сервер(apache). Насильственно пересадила себя на
 раскладку Дворака. Через месяц-полтора скорость набора достигла
-прежнего уровня и продолжила расти. Перевёл {\tt /home} со всеми
-конфигами и проектами под git с подмодулями, после чего развернул копию своего
-development-окружения прямо на сервере. Купил Thinkpad T520. Когда у
+прежнего уровня и продолжила расти. Перевела {\tt /home} со всеми
+конфигами и проектами под git с подмодулями, после чего развернула копию своего
+development-окружения прямо на сервере. Купила Thinkpad T520. Когда у
 него сгорела материнская плата и он три недели был в ремонте,
 весь девелопмент вёлся на сервере с ноутбука сестры через Putty. {\tt tmux}
 проявил себя как нельзя лучше, снижение в производительности работы
-было незначительным. Решил лучше разобраться с vim'ом. Понял в чём
+было незначительным. Решила лучше разобраться с vim'ом. Поняла в чём
 суть режимов и очень понравилось. Vim script по-прежнему казался
 убогим. Нашёл evil для емакса, которым пользуюсь до сих пор. Vim с
 минимальным конфигом использую для единичных файлов. Scala ушла на
 второй план. Появился нездоровый интерес к Common Lisp и его
-мультипарадигменности, макросам и ориентации на DSL. Читал <<ANSI Common
-Lisp>> и <<On Lisp>> Пола Грэма. Поучаствовал в конкурсе <<Системный
-администратор 2012>>, получил сертификат что являюсь <<гуру системного
+мультипарадигменности, макросам и ориентации на DSL. Читала <<ANSI Common
+Lisp>> и <<On Lisp>> Пола Грэма. Поучаствовала в конкурсе <<Системный
+администратор 2012>>, получила сертификат что являюсь <<гуру системного
 администрирования>>. Веб-разработка на Ruby on Rails окончательно надоела своей
-однообразностью. Решил уйти с работы. Поскольку распределён, решил
+однообразностью. Решила уйти с работы. Поскольку распределена, решила
 пойти в магистратуру и совместить приятное с полезным "--- в рамках
 магистерской пишу свою реализацию Ruby на Common Lisp.
 
 Сейчас заканчиваю курс Мартина Одерски <<Functional Programming in
 Scala>> на {\tt coursera.com}, параллельно читаю <<Let over Lambda>> и
-<<The Art of Metaobject Protocol>>. Начал разбираться с OCaml'ом. В
+<<The Art of Metaobject Protocol>>. Начала разбираться с OCaml'ом. В
 планах висит математическая логика (потом, возможно, теория типов и теория
 категорий)
 
-\section*{С чем работал по текущий момент}
+\section*{С чем работала по текущий момент}
 
 \subsection*{Администрирование}
 
-Работал с Debian, Ubuntu, CentOS, Fedora, SuSE,
-Archlinux. Подготавливал сервера и код приложений для деплоймента через
-Capistrano. Настраивал Postfix, VSFTPD, Apache/mod\_rails, NGINX,
-Squid. Писал скрипты для всего что не хотелось делать
-руками. Знаю IPv4-сети и немного IPv6. Настраивал загрузку в чистом
-UEFI режиме. Настраивал сеть в UEFI shell. Держу две VPSки.
+Работала с Debian, Ubuntu, CentOS, Fedora, SuSE,
+Archlinux. Подготавливала сервера и код приложений для деплоймента через
+Capistrano. Настраивала Postfix, VSFTPD, Apache/mod\_rails, NGINX,
+Squid. Писала скрипты для всего что не хотелось делать
+руками. Знаю IPv4-сети и немного IPv6. Настраивала загрузку в чистом
+UEFI режиме. Настраивала сеть в UEFI shell. Держу две VPSки.
 
 \subsection*{Системное ПО}
 
 C89, C99, POSIX API(работа с процессами, файлами, IP- и UNIX-сокетами,
-синхронизация процессов и потоков). Писал под x86/amd64, MSP430, ATMEL (Arduino).
+синхронизация процессов и потоков). Писала под x86/amd64, MSP430, ATMEL (Arduino).
 
 \subsection*{Веб-разработка}
 
-Писал на Ruby on Rails и Sinatra. Для генерации темплейтов использовал
-HAML, Slim, Liquid. Для CSS использовал SASS/SCSS и Less. Использовал
-CoffeeScript для генерации JS. Использовал RefineryCMS. Использовал
-RSpec, Cucumber, Test::Unit, Capybara. Настраивал Passenger для
-продакшена, настраивал деплоймент через Capistrano. Работал с MySQL,
+Писала на Ruby on Rails и Sinatra. Для генерации темплейтов использовала
+HAML, Slim, Liquid. Для CSS использовала SASS/SCSS и Less. Использовала
+CoffeeScript для генерации JS. Использовала RefineryCMS. Использовала
+RSpec, Cucumber, Test::Unit, Capybara. Настраивала Passenger для
+продакшена, настраивала деплоймент через Capistrano. Работала с MySQL,
 PostgreSQL и MongoDB (с ней в минимальном объёме) в качестве базы
 данных.
 
@@ -174,8 +174,8 @@ PostgreSQL и MongoDB (с ней в минимальном объёме) в ка
 
 Понимаю что такое чистота, оптимизация хвостовой рекурсии, замыкания,
 функции высших порядков, карринг, бесточечная нотация, модель акторов.
-Писал на Erlang (помню gen\_server, supervisor; работал с yaws), OCaml (недавно),
-Haskell (давно и совсем чуть-чуть), Scheme, Scala. Писал в функциональном стиле
+Писала на Erlang (помню gen\_server, supervisor; работала с yaws), OCaml (недавно),
+Haskell (давно и совсем чуть-чуть), Scheme, Scala. Писала в функциональном стиле
 на Ruby, JavaScript, Common Lisp. Есть желание расти в этом направлении.
 
 \end{document}
