cv.tex: fix name

--- a/cv.tex
+++ b/cv.tex
@@ -20,7 +20,7 @@
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
-\name{Ales Huzik} % Your name
+\name{Alesya Huzik} % Your name
 \address{Sydney, Australia} % Your address
 \address{+61~427~990-909 \\ me@aguzik.net} % Your phone number and email
 
