story-ru: add a note about writing time

--- a/story-ru.tex
+++ b/story-ru.tex
@@ -45,7 +45,7 @@
 
 \begin{document}
 
-\section*{О себе}
+\section*{О себе (написано в 2012 или 2013 году)}
 
 Гузик Алеся Юрьевна. Родилась 1 сентября 1990 года в Минске. С
 компьютером с 5 лет. Около третьего класса твёрдо решила связать свою
